--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "lerna": "2.0.0-beta.36"
+    "lerna": "2.0.0-beta.36",
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "untitled": "bash ./tasks/untitled.sh",
