--- a/packages/eslint-plugin-untitled/package.json
+++ b/packages/eslint-plugin-untitled/package.json
@@ -21,8 +21,7 @@
   "engines": {
     "node": ">=6"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "*",
     "babel-core": "*",
@@ -34,16 +33,18 @@
     "eslint-plugin-jsx-a11y": "*",
     "eslint-plugin-react": "*",
     "jest-cli": "*",
+    "nodemon": "^1.11.0",
     "rimraf": "*"
   },
   "peerDependencies": {
     "eslint": "*"
   },
   "scripts": {
-    "build": "babel src -d build",
+    "build": "babel src --out-dir build --ignore test.js",
     "build:w": "npm run build -- --watch",
     "clean": "rimraf build",
     "lint": "eslint src",
+    "lint:w": "nodemon --watch src --exec npm run lint",
     "prebuild": "npm run clean",
     "pretest": "npm run lint",
     "test": "jest",
@@ -55,11 +56,29 @@
     ]
   },
   "eslintConfig": {
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "env": {
+      "node": true,
+      "jest": true
+    },
+    "rules": {
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "eol-last": [
+        "error",
+        "never"
+      ],
+      "quotes": [
+        "error",
+        "double"
+      ]
+    }
   },
   "jest": {
     "testEnvironment": "node",
-    "testRegex": "tests/.*\\.js$",
+    "testRegex": "src/.*\\.test\\.js$",
     "collectCoverageFrom": [
       "src/**/*.js"
     ]
