--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ node_js:
 cache:
   directories:
   - node_modules
+  - packages/eslint-config-untitled/node_modules
+  - packages/eslint-plugin-untitled/node_modules
+  - packages/untitled/node_modules
   - packages/untitled-author/node_modules
   - packages/untitled-author-scripts/node_modules
+  - packages/untitled-storyteller-client/node_modules
+  - packages/untitled-storyteller-server/node_modules
