--- a/packages/eslint-plugin-untitled/package.json
+++ b/packages/eslint-plugin-untitled/package.json
@@ -8,12 +8,12 @@
     "eslint-plugin",
     "untitled"
   ],
-  "license": "UNLICENSED",
-  "private": true,
+  "author": "Will Allan <billyzkid@yahoo.com> (https://github.com/billyzkid)",
+  "homepage": "https://billyzkid.github.io/untitled/",
+  "bugs": "https://github.com/billyzkid/untitled/issues",
   "repository": "billyzkid/untitled",
-  "bugs": {
-    "url": "https://github.com/billyzkid/untitled/issues"
-  },
+  "license": "MIT",
+  "private": true,
   "main": "build/index.js",
   "files": [
     "build"
@@ -21,34 +21,32 @@
   "engines": {
     "node": ">=6"
   },
-  "dependencies": {},
   "devDependencies": {
-    "babel-cli": "*",
-    "babel-core": "*",
-    "babel-jest": "*",
-    "babel-preset-latest": "*",
-    "eslint": "*",
-    "eslint-config-airbnb": "*",
-    "eslint-plugin-import": "*",
-    "eslint-plugin-jsx-a11y": "*",
-    "eslint-plugin-react": "*",
-    "jest-cli": "*",
+    "babel-cli": "^6.22.2",
+    "babel-preset-latest": "^6.22.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "jest-cli": "^18.1.0",
     "nodemon": "^1.11.0",
-    "rimraf": "*"
+    "rimraf": "^2.5.4"
   },
   "peerDependencies": {
-    "eslint": "*"
+    "eslint": "^3.15.0"
   },
   "scripts": {
     "build": "babel src --out-dir build --ignore test.js",
-    "build:w": "npm run build -- --watch",
+    "build:watch": "npm run build -- --watch",
     "clean": "rimraf build",
     "lint": "eslint src",
-    "lint:w": "nodemon --watch src --exec npm run lint",
+    "lint:watch": "nodemon --watch src --exec npm run lint",
     "prebuild": "npm run clean",
     "pretest": "npm run lint",
     "test": "jest",
-    "test:w": "npm run test -- --watch"
+    "test:coverage": "npm run test -- --coverage",
+    "test:watch": "npm run test -- --watch"
   },
   "babel": {
     "presets": [
