--- a/packages/untitled-author/package.json
+++ b/packages/untitled-author/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "eslint": "^3.15.0",
     "eslint-config-defaults": "^9.0.0",
+    "eslint-plugin-untitled": "file:///C:\\Code\\untitled\\packages\\eslint-plugin-untitled",
     "nodemon": "^1.11.0"
   },
   "scripts": {
@@ -38,6 +39,12 @@
     "env": {
       "node": true,
       "es6": true
+    },
+    "plugins": [
+      "untitled"
+    ],
+    "rules": {
+      "untitled/no-console": 2
     }
   },
   "preferGlobal": true,
