--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 cache:
   directories:
   - node_modules
+  - packages/babel-preset-untitled/node_modules
   - packages/eslint-config-untitled/node_modules
   - packages/eslint-plugin-untitled/node_modules
   - packages/untitled/node_modules
