--- a/packages/untitled-author/package.json
+++ b/packages/untitled-author/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-preset-untitled": "^0.0.1",
     "eslint": "^3.15.0",
     "eslint-plugin-untitled": "^0.0.1",
@@ -50,19 +52,14 @@
     ]
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": [
       "eslint:recommended",
       "plugin:untitled/recommended"
     ],
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "experimentalObjectRestSpread": true
-      }
-    },
     "env": {
       "node": true,
+      "jest": true,
       "es6": true
     },
     "plugins": [
