--- a/packages/babel-preset-untitled/package.json
+++ b/packages/babel-preset-untitled/package.json
@@ -82,9 +82,8 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "testRegex": "src/.*\\.test\\.js$",
-    "collectCoverageFrom": [
-      "src/**/*.js"
+    "testPathDirs": [
+      "src"
     ]
   }
 }
