--- a/packages/eslint-plugin-untitled/package.json
+++ b/packages/eslint-plugin-untitled/package.json
@@ -80,9 +80,8 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "testRegex": "src/.*\\.test\\.js$",
-    "collectCoverageFrom": [
-      "src/**/*.js"
+    "testPathDirs": [
+      "src"
     ]
   }
 }
