--- a/packages/babel-preset-untitled/package.json
+++ b/packages/babel-preset-untitled/package.json
@@ -28,12 +28,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
     "jest-cli": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
@@ -56,28 +54,15 @@
     ]
   },
   "eslintConfig": {
-    "extends": "airbnb",
+    "root": "true",
+    "parser": "babel-eslint",
+    "extends": [
+      "eslint:recommended"
+    ],
     "env": {
+      "es6": true,
       "node": true,
       "jest": true
-    },
-    "rules": {
-      "comma-dangle": [
-        "error",
-        "never"
-      ],
-      "eol-last": [
-        "error",
-        "never"
-      ],
-      "linebreak-style": [
-        "error",
-        "windows"
-      ],
-      "quotes": [
-        "error",
-        "double"
-      ]
     }
   },
   "jest": {
