--- a/packages/eslint-config-untitled/package.json
+++ b/packages/eslint-config-untitled/package.json
@@ -23,12 +23,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
-    "babel-preset-latest": "^6.22.0",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
+    "babel-preset-untitled": "^0.0.1",
     "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
     "jest-cli": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
@@ -52,32 +50,19 @@
   },
   "babel": {
     "presets": [
-      "latest"
+      "untitled"
     ]
   },
   "eslintConfig": {
-    "extends": "airbnb",
+    "root": "true",
+    "parser": "babel-eslint",
+    "extends": [
+      "eslint:recommended"
+    ],
     "env": {
+      "es6": true,
       "node": true,
       "jest": true
-    },
-    "rules": {
-      "comma-dangle": [
-        "error",
-        "never"
-      ],
-      "eol-last": [
-        "error",
-        "never"
-      ],
-      "linebreak-style": [
-        "error",
-        "windows"
-      ],
-      "quotes": [
-        "error",
-        "double"
-      ]
     }
   },
   "jest": {
