--- a/packages/untitled-author/package.json
+++ b/packages/untitled-author/package.json
@@ -27,10 +27,8 @@
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^18.0.0",
-    "babel-preset-untitled": "^0.0.1",
+    "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
-    "eslint-config-untitled": "^0.0.1",
-    "eslint-plugin-untitled": "^0.0.1",
     "jest-cli": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
@@ -46,16 +44,6 @@
     "test": "jest",
     "test:coverage": "npm run test -- --coverage",
     "test:watch": "npm run test -- --watch"
-  },
-  "babel": {
-    "presets": [
-      "untitled"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "untitled"
-    ]
   },
   "jest": {
     "testEnvironment": "node",
