Use root .babelrc and .eslintrc

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,14 @@
 {
   "presets": [
     "latest"
+  ],
+  "plugins": [
+    "transform-class-properties",
+    [
+      "transform-object-rest-spread",
+      {
+        "useBuiltIns": true
+      }
+    ]
   ]
 }
