--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "private": true,
   "devDependencies": {
-    "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
     "lerna": "2.0.0-beta.36"
   },
   "scripts": {
-    "untitled": "bash ./tasks/untitled.sh",
-    "start": "bash ./tasks/start.sh",
-    "test": "bash ./tasks/test.sh",
-    "build": "bash ./tasks/build.sh",
+    "untitled": "bash tasks/untitled.sh",
+    "start": "bash tasks/start.sh",
+    "test": "bash tasks/test.sh",
+    "build": "bash tasks/build.sh",
     "postinstall": "bash tasks/postinstall.sh",
-    "publish": "bash ./tasks/publish.sh"
+    "publish": "bash tasks/publish.sh"
   }
 }
