--- a/packages/__examples__/my-untitled-extension/package.json
+++ b/packages/__examples__/my-untitled-extension/package.json
@@ -15,18 +15,19 @@
   "engines": {
     "node": ">=6"
   },
+  "dependencies": {
+    "untitled": "^0.0.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
     "babel-preset-untitled": "^0.0.1",
     "eslint": "^3.15.0",
     "eslint-config-untitled": "^0.0.1",
     "eslint-plugin-untitled": "^0.0.1",
     "jest-cli": "^18.1.0",
     "nodemon": "^1.11.0",
-    "rimraf": "^2.5.4",
-    "untitled": "^0.0.1"
+    "rimraf": "^2.5.4"
   },
   "scripts": {
     "start": "babel-node scripts/start.js --presets untitled",
