Use eslint plugin everywhere

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,5 @@
 {
-  "root": true,
-  "parser": "babel-eslint",
   "extends": [
-    "eslint:recommended"
-  ],
-  "env": {
-    "es6": true,
-    "node": true,
-    "jest": true
-  },
-  "rules": {
-    "no-console": "warn"
-  }
+    "untitled"
+  ]
 }
