--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
+    "eslint-config-untitled": "^0.0.1",
+    "eslint-plugin-untitled": "^0.0.1",
     "lerna": "2.0.0-beta.36"
   },
   "scripts": {
