--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TODO",
   "keywords": [
     "untitled",
-    "interactive fiction"
+    "interactive fiction",
+    "monorepo"
   ],
   "author": "Will Allan <billyzkid@yahoo.com> (https://github.com/billyzkid)",
   "homepage": "https://billyzkid.github.io/untitled/",
@@ -18,8 +19,6 @@
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
-    "eslint-config-untitled": "^0.0.1",
-    "eslint-plugin-untitled": "^0.0.1",
     "lerna": "2.0.0-beta.36"
   },
   "scripts": {
