--- a/packages/eslint-config-untitled/package.json
+++ b/packages/eslint-config-untitled/package.json
@@ -23,7 +23,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-eslint": "^7.1.1",
     "eslint": "^3.15.0",
+    "eslint-plugin-untitled": "^0.0.1",
     "jest-cli": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
