--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "lerna": "2.0.0-beta.36"
   },
   "scripts": {
-    "untitled": "bash tasks/untitled.sh",
-    "start": "bash tasks/start.sh",
-    "test": "bash tasks/test.sh",
-    "build": "bash tasks/build.sh",
-    "postinstall": "bash tasks/postinstall.sh",
-    "publish": "bash tasks/publish.sh"
+    "build": "lerna run build",
+    "clean": "lerna run clean",
+    "lint": "lerna run lint",
+    "postinstall": "lerna bootstrap",
+    "publish": "lerna publish",
+    "test": "lerna run test"
   }
 }
