--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "TODO",
   "keywords": [
     "untitled",
-    "interactive fiction",
-    "monorepo"
+    "interactive fiction"
   ],
   "author": "Will Allan <billyzkid@yahoo.com> (https://github.com/billyzkid)",
   "homepage": "https://billyzkid.github.io/untitled/",
@@ -14,11 +13,6 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-    "eslint": "^3.15.0",
     "lerna": "2.0.0-beta.36"
   },
   "scripts": {
