--- a/packages/eslint-config-untitled/package.json
+++ b/packages/eslint-config-untitled/package.json
@@ -21,36 +21,36 @@
   "engines": {
     "node": ">=6"
   },
+  "peerDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.15.0",
+    "eslint-plugin-untitled": "^0.0.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
     "eslint-plugin-untitled": "^0.0.1",
     "jest-cli": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
   },
-  "peerDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.15.0",
-    "eslint-plugin-untitled": "^0.0.1"
-  },
   "scripts": {
     "build": "babel src --out-dir build --ignore test.js",
     "build:watch": "npm run build -- --watch",
     "clean": "rimraf build",
+    "clean:all": "rimraf build coverage node_modules",
+    "coverage": "npm run test -- --coverage",
+    "coverage:watch": "npm run coverage -- --watch",
     "lint": "eslint src",
     "lint:watch": "nodemon --watch src --exec npm run lint",
     "prebuild": "npm run clean",
+    "prepublish": "npm run build",
     "pretest": "npm run lint",
-    "test": "jest",
-    "test:coverage": "npm run test -- --coverage",
+    "test": "jest --config ../../.jestrc",
     "test:watch": "npm run test -- --watch"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "testPathDirs": [
-      "src"
-    ]
   }
 }
