--- a/__examples__/my-untitled-extension/package.json
+++ b/__examples__/my-untitled-extension/package.json
@@ -26,7 +26,7 @@
     "eslint": "^3.15.0",
     "eslint-config-untitled": "^0.0.1",
     "eslint-plugin-untitled": "^0.0.1",
-    "jest-cli": "^18.1.0",
+    "jest": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
   },
