--- a/packages/babel-preset-untitled/package.json
+++ b/packages/babel-preset-untitled/package.json
@@ -33,7 +33,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
-    "jest-cli": "^18.1.0",
+    "jest": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
   },
