--- a/packages/eslint-config-untitled/package.json
+++ b/packages/eslint-config-untitled/package.json
@@ -34,7 +34,7 @@
     "babel-preset-latest": "^6.22.0",
     "eslint": "^3.15.0",
     "eslint-plugin-untitled": "^0.0.1",
-    "jest-cli": "^18.1.0",
+    "jest": "^18.1.0",
     "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
   },
