Migrated nuke script to node

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean": "lerna run clean",
     "coverage": "lerna run coverage",
     "lint": "lerna run lint",
-    "nuke": "bash scripts/nuke.sh",
+    "nuke": "node scripts/nuke",
     "postinstall": "lerna bootstrap",
     "publish": "lerna publish",
     "test": "lerna run test"
