--- a/packages/untitled-cli/package.json
+++ b/packages/untitled-cli/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "preferGlobal": true,
   "bin": {
-    "untitled": "build/index.js"
+    "untitled": "bin/untitled.js"
   },
   "files": [
     "build"
