--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@
 language: node_js
 node_js:
   - 6
+script:
+  - npm run test
+  - npm run coverage
+after_success:
+  - cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
