--- a/packages/eslint-plugin-untitled/package.json
+++ b/packages/eslint-plugin-untitled/package.json
@@ -14,7 +14,7 @@
   "repository": "billyzkid/untitled",
   "license": "MIT",
   "private": true,
-  "main": "build/index.js",
+  "main": "./build/index.js",
   "files": [
     "build"
   ],
@@ -36,16 +36,15 @@
     "rimraf": "^2.5.4"
   },
   "scripts": {
-    "build": "babel src --ignore test.js --out-dir build --source-maps",
+    "build": "babel ./src --out-dir ./build --ignore *.test.js --source-maps",
     "build:watch": "npm run build -- --watch",
-    "clean": "rimraf build",
+    "clean": "rimraf ./build",
     "coverage": "npm run test -- --coverage",
     "coverage:watch": "npm run coverage -- --watch",
-    "lint": "eslint src",
-    "lint:watch": "nodemon --watch src --exec npm run lint",
-    "prebuild": "npm run clean",
+    "lint": "eslint ./src",
+    "lint:watch": "nodemon --watch ./src --exec npm run lint",
+    "prebuild": "npm run clean && npm run lint && npm run test",
     "prepublish": "npm run build",
-    "pretest": "npm run lint",
     "test": "jest --config ../../.jestrc",
     "test:watch": "npm run test -- --watch"
   }
