--- a/packages/untitled-cli/package.json
+++ b/packages/untitled-cli/package.json
@@ -14,9 +14,10 @@
   "private": true,
   "preferGlobal": true,
   "bin": {
-    "untitled": "bin/untitled.js"
+    "untitled": "./bin/untitled.js"
   },
   "files": [
+    "bin",
     "build"
   ],
   "engines": {
@@ -34,16 +35,15 @@
     "rimraf": "^2.5.4"
   },
   "scripts": {
-    "build": "babel src --ignore test.js --out-dir build --source-maps",
+    "build": "babel ./src --out-dir ./build --ignore *.test.js --source-maps",
     "build:watch": "npm run build -- --watch",
-    "clean": "rimraf build",
+    "clean": "rimraf ./build",
     "coverage": "npm run test -- --coverage",
     "coverage:watch": "npm run coverage -- --watch",
-    "lint": "eslint src",
-    "lint:watch": "nodemon --watch src --exec npm run lint",
-    "prebuild": "npm run clean",
+    "lint": "eslint ./src",
+    "lint:watch": "nodemon --watch ./src --exec npm run lint",
+    "prebuild": "npm run clean && npm run lint && npm run test",
     "prepublish": "npm run build",
-    "pretest": "npm run lint",
     "test": "jest --config ../../.jestrc",
     "test:watch": "npm run test -- --watch"
   }
