--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,16 @@
 {
   "lerna": "2.0.0-beta.37",
   "version": "independent",
-  "hoist": true
+  "hoist": true,
+  "changelog": {
+    "repo": "billyzkid/untitled",
+    "labels": {
+      "tag: new feature": ":rocket: New Feature",
+      "tag: breaking change": ":boom: Breaking Change",
+      "tag: bug fix": ":bug: Bug Fix",
+      "tag: enhancement": ":nail_care: Enhancement",
+      "tag: documentation": ":memo: Documentation",
+      "tag: internal": ":house: Internal"
+    }
+  }
 }
