--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
   "private": true,
   "devDependencies": {
     "coveralls": "^2.11.16",
+    "dotenv": "^4.0.0",
     "istanbul-combine": "^0.3.0",
     "lerna": "^2.0.0-beta.37",
+    "lerna-changelog": "^0.3.0",
     "rimraf": "^2.5.4"
   },
   "scripts": {
+    "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
-    "clean": "lerna run clean",
+    "changelog": "node ./scripts/changelog",
+    "clean": "node ./scripts/clean",
     "coverage": "lerna run coverage",
     "lint": "lerna run lint",
-    "nuke": "node ./scripts/nuke",
+    "precoverage": "rimraf ./coverage",
     "postcoverage": "node ./scripts/postcoverage",
-    "postinstall": "lerna bootstrap",
+    "postinstall": "npm run bootstrap",
     "publish": "lerna publish",
     "test": "lerna run test"
   }
