--- a/packages/untitled/package.json
+++ b/packages/untitled/package.json
@@ -33,13 +33,14 @@
   "scripts": {
     "build": "babel ./src --out-dir ./build --ignore *.test.js --source-maps",
     "build:watch": "npm run build -- --watch",
-    "clean": "rimraf ./build",
     "coverage": "npm run test -- --coverage",
     "coverage:watch": "npm run coverage -- --watch",
     "lint": "eslint ./src",
+    "lint:fix": "npm run lint -- --fix",
     "lint:watch": "nodemon --watch ./src --exec npm run lint",
-    "prebuild": "npm run clean && npm run lint && npm run test",
-    "prepublish": "npm run build",
+    "prebuild": "rimraf ./build",
+    "precoverage": "rimraf ./coverage",
+    "prepublish": "npm run lint && npm run test && npm run build",
     "test": "jest --config ../../.jestrc",
     "test:watch": "npm run test -- --watch"
   }
