--- a/.jestrc
+++ b/.jestrc
@@ -3,5 +3,10 @@
   "testRegex": "\\.test\\.js$",
   "testPathDirs": [
     "src"
+  ],
+  "coverageReporters": [
+    "json",
+    "lcov",
+    "text"
   ]
 }
