--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "devDependencies": {
     "coveralls": "^2.11.16",
+    "github-base": "^0.5.1",
     "istanbul": "^0.4.5",
     "lerna": "^2.0.0-beta.37",
     "minimist": "^1.2.0",
