--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
   "private": true,
   "devDependencies": {
     "coveralls": "^2.11.16",
-    "github-base": "^0.5.1",
     "istanbul": "^0.4.5",
     "lerna": "^2.0.0-beta.37",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "rimraf": "^2.5.4"
   },
   "scripts": {
     "build": "lerna run build",
     "changelog": "node ./scripts/changelog",
     "clean": "node ./scripts/clean",
+    "contributors": "node ./scripts/contributors",
     "coverage": "lerna run coverage",
     "lint": "lerna run lint",
     "postcoverage": "istanbul report json lcov text",
