--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lerna": "^2.0.0-beta.37",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
+    "node-fetch": "^1.6.3",
     "rimraf": "^2.5.4"
   },
   "scripts": {
