--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "private": true,
   "devDependencies": {
     "coveralls": "^2.11.16",
+    "dotenv": "^4.0.0",
     "istanbul": "^0.4.5",
-    "lerna": "^2.0.0-beta.37",
+    "lerna": "^2.0.0-beta.38",
     "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
     "node-fetch": "^1.6.3",
     "rimraf": "^2.5.4"
   },
