--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": ">=6"
+    "node": ">=6",
+    "npm": ">=4"
   },
   "devDependencies": {
     "coveralls": "^2.11.16",
@@ -35,6 +36,7 @@
     "postinstall": "lerna bootstrap",
     "precoverage": "rimraf ./coverage",
     "publish": "lerna publish",
+    "release": "node ./scripts/release",
     "test": "lerna run test"
   }
 }
