--- a/packages/untitled-cli/package.json
+++ b/packages/untitled-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "untitled-cli",
-  "version": "0.0.2",
-  "description": "TODO",
+  "version": "0.0.3",
+  "description": "BLAH",
   "keywords": [
     "untitled",
     "cli"
