--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "coveralls": "^2.11.16",
     "dotenv": "^4.0.0",
     "istanbul": "^0.4.5",
-    "lerna": "^2.0.0-beta.38",
+    "lerna": "2.0.0-beta.38",
     "minimist": "^1.2.0",
     "node-fetch": "^1.6.3",
     "rimraf": "^2.5.4"
