--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,7 @@ indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = false
-
-# See https://github.com/editorconfig/editorconfig/issues/226
-# end_of_line = lf
+# end_of_line = crlf
 
 [*.md]
 trim_trailing_whitespace = false
