--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "coveralls": "^2.11.16",
     "dotenv": "^4.0.0",
+    "glob": "^7.1.1",
     "istanbul": "^0.4.5",
     "lerna": "2.0.0-beta.38",
     "minimist": "^1.2.0",
@@ -37,6 +38,7 @@
     "precoverage": "rimraf ./coverage",
     "publish": "lerna publish --skip-git",
     "release": "node ./scripts/release",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "unpublish": "node ./scripts/unpublish"
   }
 }
