--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "postcoverage": "istanbul report json lcov text",
     "postinstall": "lerna bootstrap",
     "precoverage": "rimraf ./coverage",
-    "publish": "lerna publish --skip-git",
+    "publish": "lerna publish --skip-git --skip-npm",
     "release": "node ./scripts/release",
     "test": "lerna run test",
     "unpublish": "node ./scripts/unpublish"
