--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "coveralls": "^2.11.16",
     "dotenv": "^4.0.0",
     "glob": "^7.1.1",
+    "inquirer": "^3.0.6",
     "istanbul": "^0.4.5",
     "lerna": "2.0.0-beta.38",
     "minimist": "^1.2.0",
     "node-fetch": "^1.6.3",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "semver": "^5.3.0"
   },
   "scripts": {
     "authors": "node ./scripts/authors",
