--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,10 @@
     "jest": true
   },
   "rules": {
-    "no-console": "off"
+    "no-console": "warn",
+    "semi": [
+      "error",
+      "always"
+    ]
   }
 }
