--- a/packages/untitled-scripts/package.json
+++ b/packages/untitled-scripts/package.json
@@ -22,7 +22,11 @@
     "node": ">=6"
   },
   "dependencies": {
-    "cross-spawn": "4.0.2"
+    "babel-polyfill": "^6.23.0",
+    "cross-spawn": "4.0.2",
+    "dotenv": "^4.0.0",
+    "minimist": "^1.2.0",
+    "node-fetch": "^1.6.3"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
