--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "untitled",
     "interactive fiction"
   ],
-  "author": "Will Allan <billyzkid@yahoo.com> (https://github.com/billyzkid)",
-  "homepage": "https://billyzkid.github.io/untitled/",
   "bugs": "https://github.com/billyzkid/untitled/issues",
   "repository": "billyzkid/untitled",
   "license": "MIT",
@@ -17,27 +15,25 @@
     "npm": ">=4"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-    "coveralls": "^2.11.16",
-    "dotenv": "^4.0.0",
-    "eslint": "^3.15.0",
+    "babel-eslint": "^7.2.1",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-latest": "^6.24.0",
+    "coveralls": "^2.12.0",
+    "eslint": "^3.18.0",
+    "gh-scripts": "file:///C:\\Users\\will\\Code\\gh-scripts\\gh-scripts-0.0.1.tgz",
     "glob": "^7.1.1",
-    "inquirer": "^3.0.6",
     "istanbul": "^0.4.5",
     "lerna": "2.0.0-beta.38",
     "minimist": "^1.2.0",
     "node-fetch": "^1.6.3",
-    "rimraf": "^2.5.4",
-    "semver": "^5.3.0",
-    "untitled-scripts": "^0.0.1"
+    "rimraf": "^2.6.1",
+    "semver": "^5.3.0"
   },
   "scripts": {
-    "authors": "untitled-scripts authors",
+    "authors": "gh-scripts authors",
     "build": "lerna run build",
-    "changelog": "untitled-scripts changelog --group-by-label --group-by-package",
+    "changelog": "gh-scripts changelog --group-by-label --group-by-package",
     "clean": "node ./scripts/clean",
     "coverage": "lerna run coverage",
     "lint": "lerna run lint",
