--- a/packages/untitled-scripts/package.json
+++ b/packages/untitled-scripts/package.json
@@ -20,11 +20,7 @@
     "node": ">=6"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "cross-spawn": "^5.1.0",
-    "dotenv": "^4.0.0",
-    "minimist": "^1.2.0",
-    "node-fetch": "^1.6.3"
+    "cross-spawn": "^5.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
