--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babel-preset-latest": "^6.24.0",
     "coveralls": "^2.12.0",
     "eslint": "^3.18.0",
-    "gh-scripts": "file:///C:\\Users\\will\\Code\\gh-scripts\\gh-scripts-0.0.1.tgz",
+    "gh-scripts": "file:///C:\\Code\\gh-scripts-temp\\gh-scripts-1.0.0.tgz",
     "glob": "^7.1.1",
     "istanbul": "^0.4.5",
     "lerna": "2.0.0-beta.38",
@@ -31,7 +31,7 @@
   "scripts": {
     "authors": "gh-scripts authors",
     "build": "lerna run build",
-    "changelog": "gh-scripts changelog --group-by-label --group-by-package",
+    "changelog": "gh-scripts changelog",
     "clean": "node ./scripts/clean",
     "coverage": "lerna run coverage",
     "lint": "lerna run lint",
@@ -39,7 +39,7 @@
     "postinstall": "lerna bootstrap",
     "precoverage": "rimraf ./coverage",
     "publish": "lerna publish --skip-git --skip-npm",
-    "release": "node ./scripts/release",
+    "release": "gh-scripts release",
     "test": "lerna run test",
     "unpublish": "node ./scripts/unpublish"
   }
